<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_video_streamer</name>
  <version>0.1.0</version>
  <description>ROS2 node to capture camera topics and stream them to LiveKit over WebRTC</description>
  <maintainer email="platform@golain.io">Golain Platform Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
